# pf

./: .gitignore  COWORK_PROJECT.md  DATA_HOLDINGS.md  GRID_METRICS_PLAN.md  LICENSE  PM_BRIEF.md  README.md  environment.yml  pyproject.toml
docs/: INTERFACE_SPEC_PHASE1.md  INTERFACE_SPEC_PHASE2.md  INTERFACE_SPEC_PHASE3.md  INTERFACE_SPEC_PHASE4.md  INTERFACE_SPEC_PHASE5.md  PARALLEL.md
hf_tiles_space/: DATASET_README.md  Dockerfile  README.md  app.py  requirements.txt  tile_ranges.json
notebooks/: nesbitt2006_replication.ipynb  nesbitt_anders_2009.ipynb  pf_grid_icechunk_maps.ipynb  pf_grid_preview.ipynb  pf_grid_viz.ipynb  pf_overview.ipynb  shear_cape_hypotheses_PLAN.md
scripts/: _build_grid_icechunk_nb.py  _build_grid_preview_nb.py  _build_grid_viz_nb.py  _build_nesbitt_anders_nb.py  _build_pf_overview_nb.py  _grid_maps_prototype.py  _na2009_render.py  _precompute_tiles.py  _tile_ranges.py  add_era5.py  compact_parquet.py  grid_climatology.py  grid_month.py  run_orbits_parallel.py  smoke_test_one_orbit.py  smoke_test_parallel.py  submit_era5_slurm.sh  submit_grid_slurm.sh  submit_mission_slurm.sh  submit_pf_slurm.sh
tests/: conftest.py  test_catalog_timestamp.py  test_classify.py  test_colocate.py  test_echotop_qc.py  test_era5.py  test_feature_id.py  test_features_schema.py  test_geometry.py  test_gpm_gmi_reader.py  test_gpm_ku_freq_axis.py  test_grid.py  test_grid_swath.py  test_label.py  test_parquet_roundtrip.py  test_phase3_pct_fill.py  test_phase3_schema_invariance.py  test_phase4_registries.py  test_pixel_feature_integrity.py  test_pixels.py  (+3 more)
(+36 files in other folders)
